k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm-frontend
  namespace: hcm
spec:
  type: ClusterIP
  selector:
    app: hcm-frontend
  ports:
    - port: 80
      targetPort: 80
