k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: hcm
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: db
      port: 5432
      targetPort: 5432
